--- a/src/IDPC/ContractualBundle/Resources/views/Informe/new.html.twig
+++ b/src/IDPC/ContractualBundle/Resources/views/Informe/new.html.twig
@@ -30,7 +30,9 @@
 
                     <div class="form-actions">
                         
-{{ form_widget(form.submit) }} 
+                                <button type="submit" value="Crear" class="btn btn-primary">
+                                    <i class="icon-cloud-upload"></i>Cargar
+                                </button>
                         
                         </div>
                 
