--- a/src/IDPC/ContractualBundle/Resources/views/SolicitudPago/showByPago.html.twig
+++ b/src/IDPC/ContractualBundle/Resources/views/SolicitudPago/showByPago.html.twig
@@ -5,7 +5,7 @@
     <div class="col-sm-7">
         <div class="widget-box">
             <div class="widget-header">
-                <h4>Certificado de Cumplimiento</h4>
+                <h4>Solicitud de Pago</h4>
                 <span class="widget-toolbar"> 
                 </span>
             </div>
@@ -17,11 +17,7 @@
                             <div class="profile-info-value">{{ entity.createdat|date('d-m-Y H:i:s') }}</div>
 
                         </div>
-                        <div class="profile-info-row">
-                            <div class="profile-info-name">N&uacute;mero de Planilla</div>
-                            <div class="profile-info-value">{{ entity.planilla }}</div>
-
-                        </div>
+                            
                         <div class="profile-info-row">
                             <div class="profile-info-name">Ver Certificado</div>
                             <div class="profile-info-value"><a href="{{ asset('uploads/documents/') }}{{ entity.path }}" target="_blank" >Ver documento</a></div>
@@ -32,20 +28,8 @@
                 </div>
                 <div class="widget-toolbox padding-8 clearfix">
             {% if entity.pago.estado == 100 %}
-                {# {{ form(delete_form) }} #}
-                        <a href="{{ path('cumplimiento_certificado', { 'id' : entity.id }) }}">
-                            <span class="btn btn-primary">
-                                <i class="icon-cloud-download"></i>
-                                Descargar
-                            </span>
-                        </a>
+                 {{ form(delete_form) }} 
                         
-                        <a href="{{ path('cumplimiento_edit', { 'id' : entity.id }) }}">
-                            <span class="btn btn-info">
-                                <i class="icon-cloud-upload"></i>
-                                Cargar
-                            </span>
-                        </a>
             {% endif %}   
                     </div>
                 </div>
